# finance_tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  plan.md  pyproject.toml  tailwind.config.js  vite.config.ts
public/: demo.ftcheckpoint
scripts/: cli.py
src/: App.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  SuggestedQuestions.tsx
src/components/checkpoint/: CheckpointToolbar.tsx
src/components/dashboard/: AssetAllocationChart.tsx  AssetsLiabilitiesChart.tsx  CashFlowChart.tsx  DashboardWidgetCard.tsx  FinanceBucketsChart.tsx  InsightsPanel.tsx  InvestmentComparisonChart.tsx  KeyRatiosCard.tsx  KpiCard.tsx  NetWorthChart.tsx  PnLBreakdownChart.tsx  RecurringBreakdownChart.tsx  SpendAnalysisChart.tsx  UpcomingMaturities.tsx  WidgetGuide.tsx  chartTheme.tsx  dashboardCardLayout.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/ui/: card.tsx  (+11 more)
src/constants/: chartColors.ts  currencies.ts
src/content/: dashboardGuides.ts
src/hooks/: useAiConfig.ts  useCurrency.ts  useDirtyGuard.ts
src/pages/: AssetsPage.tsx  ChatPage.tsx  CryptoImportPage.tsx  CryptoPage.tsx  DashboardPage.tsx  FixedDepositsPage.tsx  HoldingsImportPage.tsx  HoldingsPage.tsx  InsurancePage.tsx  LiquidFundsPage.tsx  LoansPage.tsx  RecurringPage.tsx  RetirementPage.tsx  SettingsPage.tsx
src/routes/: index.tsx
src/schemas/: checkpoint.ts
src/store/: financeStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: currency.ts  dynamicCardTheme.ts  ids.ts
tests/: ai.test.ts  analytics.test.ts  dynamicCardTheme.test.ts
(+18 files in other folders)
