[project]
name = "finance-tracker"
version = "1.0.0"
description = "Privacy-first personal finance tracker — local checkpoint SPA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ft-dev = "scripts.cli:dev"
ft-dev-lan = "scripts.cli:dev_lan"
ft-build = "scripts.cli:build"
ft-preview-lan = "scripts.cli:preview_lan"
ft-test = "scripts.cli:test"
ft-install = "scripts.cli:install"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
